2008-12-14  Kenta HATTORI  <hattori@bach.tatta.org>

	* conf4cpp-0.0.6 リリース

	* 生成コードのコピーコンストラクタ，代入演算子をプライベートとした

	* int型におけるuintの処理を簡単にするためパース直後に正規化処理を
	行なうにした

2008-12-11  Kenta HATTORI  <hattori@bach.tatta.org>

	* 範囲型に対する未指定のデフォルト値が範囲内に収まるようにした

	* デフォルト値の指定書式を変更

2008-11-21  Kenta HATTORI  <hattori@bach.tatta.org>

	* conf4cpp-0.0.5 リリース

	* 生成コードのインデントのズレを修正

	* 汎用setter関数の定義を追加a

	* インクルードガードを生成するようにした

	* mutableとmandatoryの順序に関するバグを修正

	* setter関数の戻り値をbool型にし，範囲チェックを追加

2008-11-20  Kenta HATTORI  <hattori@bach.tatta.org>

	* int, uint, real型の値に範囲指定を実装

	* インクルードガードの出力を追加

2008-11-11  Kenta Hattori  <hattori@bach.tatta.org>

	* conf4cpp-0.0.4 リリース
	
	* エラーまわりの処理を整理，簡素化

2008-11-10  Kenta HATTORI  <hattori@bach.tatta.org>

	* datetime, ipv4addr, ipv6addrのパーサー定義を共通化

2008-11-05  Kenta HATTORI  <hattori@bach.tatta.org>

	* mutable, constキーワードの追加と，set_メンバー関数出力部の追加

2008-11-04  Kenta HATTORI  <hattori@bach.tatta.org>

	* conf4cpp-0.0.3 リリース

	* BOOST_SPIRIT_FILEITERATOR_STDを定義し，std_file_iteratorを使用す
	るようにした

	* time型，ipv4addr型, ipv6addr型を追加

2008-10-31  Kenta HATTORI  <hattori@bach.tatta.org>

	* uint型を追加

2008-10-26  Kenta HATTORI  <hattori@bach.tatta.org>

	* ジェネレータのエラー処理の実装をリファクタ

	* enum定義のパースエラー時にredefined symbolエラーというメッセージ
	が表示されるバグを修正

2008-10-18  Kenta HATTORI  <hattori@bach.tatta.org>

	* デフォルト値を設定できるように定義ファイルの文法解析部分の処理を
	修正
